@@ -398,7 +398,7 @@
 							}
 						});
 
-					var async = flickerfreeScreen.getImageSboxHeight(url, function (height) {
+					var async = flickerfreeScreen.getImageSboxHeight(url, function(height) {
 							zbx_sbox.height = parseInt(height, 10);
 							// 'src' should be added only here to trigger load event after new height is received.
 							img.data('zbx_sbox', zbx_sbox)
